--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ turing:
 	$(CC) $(CPPFLAGS) $(OBJS) -o turing
 
 
-.PHONY: clean test
+.PHONY: clean test1 test2 test3
 
 clean: 
 	rm -f turing
@@ -18,3 +18,10 @@ clean:
 
 test1: clean turing
 	./turing ../test1
+
+test2: clean turing
+	./turing ../test2
+
+test3: clean turing
+	./turing ../test3
+
